<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Finca Carga</string>

    <string name="text_cancel">Cancel</string>
    <string name="text_done">Submit</string>
    <string name="text_ok">OK</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="error">Error</string>
    <string name="common_error">There is an error. Please try again.</string>
    <string name="information">Information</string>
    <string name="no_internet">No internet connection. Make sure that Wi-Fi or mobile data is turned on, then try again.</string>
    <string name="invalid_user">Incorrect username or password</string>
    <string name="no_data_found">No data found</string>
    <string name="next">Next</string>
    <string name="enter_the_username">Enter the username</string>
    <string name="enter_the_password">Enter the password</string>
    <string name="logout">Logout</string>
    <string name="version">Version</string>
    <string name="logout_confirmation">Are you sure you want to logout?</string>
    <string name="confirmation">Confirmation</string>
    <string name="exit_app">Press again back to exit from the app</string>
    <string name="data_synced_success">Data synced successfully!!!…</string>
    <string name="data_download_success">Master downloaded successfully!!!…</string>

    <string name="dashboard">Dashboard</string>
    <string name="synchronization">Synchronization</string>
    <string name="farm_list">Farm Lists</string>
    <string name="export_database">Export Data</string>
    <string name="export_database_success">Data Exported Successfully!!!…</string>
    <string name="create_farm">Create</string>
    <string name="hint_text">Hint Text</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="wood_species">Species</string>
    <string name="wood_type">Type</string>
    <string name="inventory_number">ICA</string>
    <string name="purchase_contract">Contract</string>
    <string name="purchase_date">Date</string>
    <string name="truck_plate_number">Truck Plate Number</string>
    <string name="submit">Submit</string>
    <string name="select">--- Select ---</string>
    <string name="farm_data">Farm Data</string>
    <string name="truck_no">Truck No</string>
    <string name="total_pieces">Total Pieces</string>
    <string name="total_gross_volume">Total Volume (m³)</string>
    <string name="circumference">Circumference</string>
    <string name="length">Length</string>
    <string name="pieces">Pieces</string>
    <string name="close_farm">Close</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="delete">Delete</string>
    <string name="reset">Reset</string>
    <string name="action">Action</string>
    <string name="gross_volume">Volume (m³)</string>
    <string name="ica">ICA</string>
    <string name="supplier">Supplier</string>
    <string name="volume">Volume (m³)</string>
    <string name="date">Date</string>
    <string name="contract">Contract</string>
    <string name="farm_created">Farm created successfully</string>
    <string name="captured_data">Captured Data</string>
    <string name="farm_captured_data">Farm Captured Data</string>
    <string name="delete_confirmation">Are you sure you want to delete?</string>
    <string name="data_deleted_successfully">Data Deleted Successfully</string>
    <string name="inventory_number_already_exists">ICA already exists</string>
    <string name="data_synced_successfully">Data synced successfully!!!…</string>
    <string name="are_you_sure_you_want_to_close_the_farm">Are you sure you want to close the farm?</string>
    <string name="farm_closed_successfully">Farm Closed Successfully</string>
    <string name="status">Status</string>
    <string name="closed">Closed</string>
    <string name="opened">Opened</string>
    <string name="suppliers">Suppliers</string>
    <string name="total">Total</string>
    <string name="m">m³</string>
    <string name="today_transactions"><u>Today Transactions</u></string>
    <string name="last_5_days_transactions"><u>Recent Transactions</u></string>
    <string name="icas">ICAs</string>
    <string name="permission_granted">Permission Granted</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="square_blocks">Square Blocks</string>
    <string name="round_logs">Round Logs</string>
    <string name="truck_driver_name">Truck Driver Name</string>
    <string name="farm_updated">Data has been updated</string>
    <string name="girth_check">Girth should not be equal or lesser than zero</string>
    <string name="length_check">Length should not be equal or lesser than zero</string>
    <string name="pieces_check">Pieces should not be equal or lesser than zero</string>
</resources>