<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_back" />

    <LinearLayout
        android:id="@+id/lnrDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardReception"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_normal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvInventoryOrder"
                    style="@style/style_TitleText_editText1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_semibold"
                    android:gravity="center"
                    android:text="@string/inventory_number"
                    android:textColor="@color/colorCharcoal"
                    android:textSize="@dimen/text_small" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvSupplierName"
                    style="@style/style_TitleText_editText1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_semibold"
                    android:layout_below="@id/tvInventoryOrder"
                    android:gravity="center"
                    android:text="@string/supplier_name"
                    android:textColor="@color/colorCharcoal"
                    android:textSize="@dimen/text_small" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvPurchaseContract"
                    style="@style/style_TitleText_editText1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_semibold"
                    android:layout_below="@id/tvSupplierName"
                    android:gravity="center"
                    android:text="@string/purchase_contract"
                    android:textColor="@color/colorCharcoal"
                    android:textSize="@dimen/text_small" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvPurchaseDate"
                    style="@style/style_TitleText_editText1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_semibold"
                    android:layout_below="@id/tvPurchaseContract"
                    android:gravity="center"
                    android:text="@string/purchase_date"
                    android:textColor="@color/colorCharcoal"
                    android:textSize="@dimen/text_small" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</RelativeLayout>